Fixes missing border colour

--- a/css/colours.scss
+++ b/css/colours.scss
@@ -108,6 +108,9 @@ $washed-red: #FFDFDF;
 .border-white-03 {
   border-color: rgba(255,255,255,.3);
 }
+.border-white-05 {
+  border-color: rgba(255,255,255,.5);
+}
 
 @media screen and (min-width: $ns) {
 
